add change to the 5 hm

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KerysGarden</title>
-    <!-- тут не уверена насчет названия, могу ли его оставить таким, или правильно названием папки Lesson... -->
+    <link rel="stylesheet" href="css/styles.css">
+   
   </head>
 
   <body>
@@ -16,6 +17,6 @@
     </div>
 
     <a href="second-pages/delivery.html">Go to delivery page</a>
-    <!-- хотела отцентровать и ссылку, но уже не пойму как это сделать -->
+    
   </body>
 </html>
